modify .sh