@@ -2,9 +2,7 @@
 
 SITE='csdn_topic'
 
-find ./target/classes/spring |xargs rm -f -r
 find ./target/classes -name "*.xml"|xargs rm -f
-
 
 tmp='./bin/resources'
 tmp='./target/classes':$tmp
@@ -12,7 +10,7 @@ tmp='./target/osseanextractor-0.0.1-jar-with-dependencies-without-resources/*':$
 
 CLASSPATH=$tmp:$CLASSPATH
 
-JAVA_OPTS="-ms128m -mx128m -Xmn128m -Djava.awt.headless=true -XX:MaxPermSize=128m" 
+JAVA_OPTS="-Xms128m -Xmx128m -Xmn80m" 
 
 echo $CLASSPATH
 
